SF-831 Fix overflow of community checking label in Azerbaijani (#617)
Shortening the translation was first ruled out as a possibility before
increasing the area for the community checking label in the drawer.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
@@ -33,6 +33,9 @@
         color: $purpleMedium;
         transition: color 0.15s;
       }
+      .mdc-list-item__graphic {
+        margin-right: 24px;
+      }
     }
   }
 
